[tool.poetry]
name = "text-to-mp3"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "text_to_mp3"}]

[tool.poetry.dependencies]
python = "^3.11"
gTTS = "^2.3.2"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
